[package]
name = "nonsense"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Lorem ipsum placeholder text generator"
documentation = "https://github.com/misaka10987/nonsense"
homepage = "https://github.com/misaka10987/nonsense"
repository = "https://github.com/misaka10987/nonsense"
readme = "README.md"
keywords = ["lipsum", "lorem ipsum", "placeholder", "text generator", "cli"]
license = "MIT"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.48", features = ["derive"] }
lipsum = "0.9.1"
# not using latest version for compatibility with upstream `lipsum`
rand = "0.8.5"
